# gt_cooperative_mpc

./: CMakeLists.txt  package.xml  plugin.xml
include/gt_coop_mpc/: gt_coop_mpc.h  mpc_utils.h
msg/: PoseMPC.msg
src/gt_coop_mpc/: array_traj_node.cpp  array_traj_sub.cpp  gt_coop_mpc.cpp  mpc.cpp  mpc_node.cpp  mpc_utils.cpp  test.cpp
